# fraud-detection_demo_with_calibration

./: .gitignore  CLAUDE.md  LICENSE  README.md  build_and_evaluate_model.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
calibrated_clf/: __init__.py  calibration.py  config.py  custom_metrics.py  data_loader.py  data_transformers.py  model.py  model_optimisation.py  plot_functions.py  train_model.py  validators.py
docs/: README.md
examples/: README.md  fraud_detection_basic.py  fraud_detection_with_venn_abers.py  hyperparameter_tuning.py  time_windowed_encoding_demo.py
src/: calibration.py  custom_metrics.py  data_loader.py  data_transformers.py  feature_selection.py  model.py  model_optimisation.py  plot_functions.py  train_model.py  validators.py
tests/: __init__.py  conftest.py  test_calibration.py  test_data_loader.py  test_data_transformers.py  test_model.py
